puur naar nederlands vertaald zodat het begrijpelijk is

--- a/thuis project timer/index.html
+++ b/thuis project timer/index.html
@@ -7,35 +7,35 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <canvas id="particles"></canvas>
+    <canvas id="deeltjes"></canvas>
     <div class="container">
         <div id="time">
             <div class="circle" style="--color: #04fc43">
-                <div class="dots h_dot"></div>
+                <div class="punten punt_uur"></div>
                 <svg>
                     <circle cx="70" cy="70" r="70"></circle>
-                    <circle cx="70" cy="70" r="70" id="hh"></circle>
+                    <circle cx="70" cy="70" r="70" id="uu_cirkel"></circle>
                 </svg>
-                <div id="hours">00<span>Uren</span></div>
+                <div id="uren">00<span>Uren</span></div>
             </div>
             <div class="circle" style="--color: #fee800">
-                <div class="dots m_dot"></div>
+                <div class="punten punt_minuut"></div>
                 <svg>
                     <circle cx="70" cy="70" r="70"></circle>
-                    <circle cx="70" cy="70" r="70" id="mm"></circle>
+                    <circle cx="70" cy="70" r="70" id="mm_cirkel"></circle>
                 </svg>
-                <div id="minutes">00<span>Minuten</span></div>
+                <div id="minuten">00<span>Minuten</span></div>
             </div>
             <div class="circle" style="--color: #ff2972">
-                <div class="dots s_dot"></div>
+                <div class="punten punt_seconde"></div>
                 <svg>
                     <circle cx="70" cy="70" r="70"></circle>
-                    <circle cx="70" cy="70" r="70" id="ss"></circle>
+                    <circle cx="70" cy="70" r="70" id="ss_cirkel"></circle>
                 </svg>
-                <div id="seconds">00<span>Seconden</span></div>
+                <div id="seconden">00<span>Seconden</span></div>
             </div>
-            <div class="ap">
-                <div id="ampm">VM</div>
+            <div class="aand">
+                <div id="aanduiding">VM</div>
             </div>
         </div>
     </div>
